[package]
name = "rp-pico-w"
version = "0.0.1"
authors = ["The rp-rs Developers"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/tree/main/boards/rp-pico-w"
description = "Board Support Package for the Raspberry Pi Pico W"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rp-rs/rp-hal.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { path = "../../rp2040-hal", version = "0.5.0" }
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
cyw43 = { version = "0.1.0", path = "/home/jan/rp2040/cyw43" }
embassy = { version = "0.1.0",  features = ["time", "time-tick-1mhz"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

#embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"] }
atomic-polyfill = "0.1.8"
critical-section = "0.2.7"
embedded-hal = "0.2.7"
#embassy = { version = "0.1.0",  features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-traits", "nightly", "unstable-pac"] }
#embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"] }

[dev-dependencies]
panic-halt= "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

