[package]
name = "rp-pico"
version = "0.3.0"
authors = ["evan <evanmolder@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/tree/main/boards/rp-pico"
description = "Board Support Package for the Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rp-rs/rp-hal.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { path = "../../rp2040-hal", version = "0.4.0"}
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
futures = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-rc.4"
nb = "1.0"
i2c-pio = { git = "https://github.com/jannic/i2c-pio-rs", rev = "571f1583583e604cc041cba329c02c12104f3b1e" }
heapless = "0.7.9"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/jannic/ws2812-pio-rs", rev = "66196aeaac60d25ab19f070bc49210e49793bfaa" }
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"

defmt = "0.2.0"
defmt-rtt = "0.2.0"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
